fixed about me section to be left aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,14 @@ body {
     margin: 0 auto;
 }
 
-
+img.responsive-img {
+    width: 80%;
+    margin-left: 35%;
+}
 
  p {
    line-height: 2rem;
+   font-size: 18px;
  }
  
  .sidenav-trigger {
@@ -47,14 +51,14 @@ body {
     margin-top: 25vh;
    
 }
- /* .parallax {
+ /* .parallax { 
    background-position: center;
    background-size: cover;
    
 
- }
+ } */
  
- .parallax-container {
+ /* .parallax-container {
     background-size: cover;
     background-position: center;
    
@@ -65,7 +69,7 @@ body {
  }  
    .parallax-container .section {
      width: 100%;
-   }  */
+   }  */ */
  
  @media only screen and (max-width : 992px) {
    .parallax-container .section {
